Make feature itests more parallel when using multiple containers.